--- a/js/packages/web/src/components/AuctionCard/index.less
+++ b/js/packages/web/src/components/AuctionCard/index.less
@@ -107,7 +107,7 @@
   }
 
   .ant-btn-primary {
-     background: linear-gradient(180deg, #4570a1 0%, #5870ee 100%);
+     background: linear-gradient(180deg, #008ae6 0%, #007acc 100%);
      border-radius: 8px;
 
       &:hover, &:focus {
