--- a/js/packages/web/src/components/InstructionsModal/index.less
+++ b/js/packages/web/src/components/InstructionsModal/index.less
@@ -7,7 +7,7 @@
   position: relative;
   box-sizing: border-box;
   border-radius: 12px;
-  background-color: #2A2A2A;
+  background-color: #000f1a;
   cursor: auto;
   padding-bottom: 0px;
   .ant-modal-footer {
