--- a/js/packages/web/src/views/home/index.less
+++ b/js/packages/web/src/views/home/index.less
@@ -23,16 +23,16 @@ footer.ant-layout-footer {
 }
 
 a:link {
-  color: #b480eb;
+  color: #3399ff;
 }
 a:visited {
-  color: #b480eb;
+  color: #3399ff;
 }
 a:hover {
-  color: #b480eb;
+  color: #3399ff;
 }
 a:active {
-  color: #b480eb;
+  color: #3399ff;
 }
 
 .masonry-grid {
