--- a/js/packages/web/src/views/pack/index.less
+++ b/js/packages/web/src/views/pack/index.less
@@ -1,7 +1,7 @@
 @import './components/RedeemModal/index.less';
 @import './components/ArtCard/index.less';
 
-@scrollbar-color: #2c2c2c;
+@scrollbar-color: #000f1a;
 
 .pack-view {
   &__sidebar-container {
