--- a/js/packages/web/src/components/ArtistCard/index.less
+++ b/js/packages/web/src/components/ArtistCard/index.less
@@ -11,7 +11,7 @@
   margin-bottom: 20px;
   background-color: transparent;
   .header-container{
-    background: linear-gradient(104.73deg, ##36577D 0%, #121212 100%);
+    background: linear-gradient(104.73deg, ##36577D 0%, #000f1a 100%);
     height: 160px;
   }
   .ant-card-cover{
@@ -28,7 +28,7 @@
     min-height: 100px;
     display: flex;
     align-items: center;
-    background-color: #2A2A2A;
+    background-color: #000f1a;
     padding: 15px;
     margin-top: -15px;
     position: relative;
