--- a/js/packages/web/src/components/TokenDialog/index.less
+++ b/js/packages/web/src/components/TokenDialog/index.less
@@ -19,7 +19,7 @@
   }
   
   .ant-btn-primary {
-    background: linear-gradient(180deg, #4570a1 0%, #5870ee 100%);
+    background: linear-gradient(180deg, #008ae6 0%, #007acc 100%);
     background-color: rgba(255, 255, 255, 0.05) !important;
 
   //    &:hover, &:focus {
