--- a/js/packages/web/src/styles/colors.less
+++ b/js/packages/web/src/styles/colors.less
@@ -4,13 +4,13 @@
 @tungsten-60: #547595;
 @tungsten-50: #0d1b28;
 @tungsten-40: #7ba4c7;
-@black-100: #121212;
+@black-100: #000f1a;
 @solana-green: #3d4844;
 @grey-20: rgba(255, 255, 255, 0.7);
 @grey-30: rgba(255, 255, 255, 0.5);
 @grey-50: rgba(255, 255, 255, 0.1);
 @grey-60: rgba(255, 255, 255, 0.05);
-@grey-70: #2a2a2a;
+@grey-70: #000f1a;
 @grey-100: #101a23;
 @mobile-breakpoint: 800px;
 @mobile-xs-max: 520px;
