--- a/js/packages/web/src/views/auction/index.less
+++ b/js/packages/web/src/views/auction/index.less
@@ -261,7 +261,7 @@ h6.info-title {
 .auction-paragraph {
   margin-top: 0;
   margin-bottom: 1em;
-  color: #6d6d6d;
+  color: #a6a6a6;
   font-family: Inter, sans-serif;
   font-style: normal;
   font-size: 0.9rem;
