--- a/js/packages/web/src/views/styles.less
+++ b/js/packages/web/src/views/styles.less
@@ -75,7 +75,7 @@
   }
 
   p {
-    color: #6d6d6d;
+    color: #a6a6a6;
     font-style: normal;
     font-size: 20px;
   }
@@ -168,7 +168,7 @@
   padding: 20px 10px;
 
   /* button/primary/default */
-  background: linear-gradient(180deg, #4570a1 0%, #5870ee 100%);
+  background: linear-gradient(180deg, #008ae6 0%, #007acc 100%);
   border-radius: 8px;
   height: 58px;
 
@@ -187,8 +187,8 @@
 }
 
 .connector {
-  color: #121212;
-  border-color: #121212;
+  color: #000f1a;
+  border-color: #000f1a;
   background: white !important;
   box-shadow: 0 0 24px rgba(26, 26, 26, 0.12);
   border-radius: 8px;
@@ -296,7 +296,7 @@ h2 {
 
 .selected-card {
   border-width: 3px;
-  border-color: #5870ee !important;
+  border-color: #007acc !important;
   border-style: solid;
 }
 
@@ -361,7 +361,7 @@ h2 {
 .particle {
   position: absolute;
   opacity: 0.9;
-  background: linear-gradient(180deg, #d329fc 0%, #8f6dde 49.48%, #19e6ad 100%);
+  background: linear-gradient(180deg, #008ae6 0%, #007acc 49.48%, #005c99 100%);
 }
 
 .slider-elem {
@@ -398,10 +398,10 @@ h2 {
 }
 
 .gray-dropdown {
-  background-color: #2a2a2a;
+  background-color: #000f1a;
   padding: 10px 0px;
   border-radius: 8px;
   & > li:hover {
-    background-color: #2a2a2a !important;
+    background-color: #000f1a !important;
   }
 }
