--- a/js/packages/web/src/components/ArtistCard/index.less
+++ b/js/packages/web/src/components/ArtistCard/index.less
@@ -11,7 +11,7 @@
   margin-bottom: 20px;
   background-color: transparent;
   .header-container{
-    background: linear-gradient(104.73deg, ##36577D 0%, #000f1a 100%);
+    background: linear-gradient(104.73deg, #36577D 0%, #000f1a 100%);
     height: 160px;
   }
   .ant-card-cover{
